fix layout issues in thesis and articles section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -332,6 +332,7 @@ main .mobile {
     border: lightgrey solid 1px;
     background-color: #978183;
     border-radius: 3px;
+    align-items: center;
 }
 .side-articles:hover {
     background-color:#453C3D;
@@ -343,7 +344,7 @@ main .mobile {
 
 .article-pic {
     width: 35%;
-    height: auto;
+    height: 35%;
     padding: 1rem;
 }
 
@@ -351,19 +352,26 @@ main .mobile {
     display: inline-flex;
     flex-direction: column;
     justify-content: center;
+    overflow: wrap;
+    padding-right: 2rem;
 }
 
 .article-title {
     font-size: 2rem;
     font-weight: bold;
     color: aliceblue;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
     text-overflow: wrap;
+    padding-top: 2rem;
 }
 
 .article-link {
     font-size: 1.5rem;
     color: #97c4cd;
+}
+
+.read-more {
+    padding-bottom: 2rem;
 }
 
 @media only screen and (max-width: 480px) {
@@ -549,6 +557,7 @@ main .mobile {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    height: auto;
 }
 
 #video-thesis {
@@ -590,6 +599,7 @@ main .mobile {
     border-radius: 3px;
     margin-bottom: 2px;
     background-color: #453C3D;
+    overflow: wrap;
 }
 
 .thesis-container:hover {
@@ -599,7 +609,7 @@ main .mobile {
 .thesis-side {
     display: inline-flex;
     flex-direction: column;
-    height: 10rem;
+    min-height: 10rem;
     justify-content: space-around;
     width: 60%;
 }
